# haskell-trees

./: CHANGELOG.md  README.md  trees.cabal
src/: Trees.hs
test/: Main.hs
